--- a/code/test_transformers.ipynb
+++ b/code/test_transformers.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "2f64807d-19ae-41cc-873d-96f7cc56c310",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-12-30 10:23:41.994731: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "2115c1b6-d72a-45fb-a8c2-a4809d31ad63",
    "metadata": {},
    "outputs": [],
@@ -41,6 +32,12 @@
     "class ReportingBiasDataset(Dataset):\n",
     "    def __init__(self, csv_file, img_dir=None, base_dir='/srv/data/gussodato/'):\n",
     "        '''TODO explain imgdir vs basedir\n",
+    "        Args:\n",
+    "            csv_file: Path to one of the four csv files in the MMERB dataset.\n",
+    "            img_dir: Path to the directory containing the relevant images. If None,\n",
+    "            assumes that both the Flickr8k and MS COCO datasets are downloaded, unzipped \n",
+    "            and located in base_dir.\n",
+    "            base_dir: Directory containing the Flickr8k and MS COCO datasets. Default: '/srv/data/gussodato/'.\n",
     "        '''\n",
     "        self.df = pd.read_csv(csv_file)\n",
     "        self.img_dir = img_dir\n",
@@ -63,14 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "bcd5fde2-9904-4bfd-ba52-f0bf7164ce86",
    "metadata": {},
    "outputs": [],
    "source": [
     "class ModelTester():\n",
     "    '''\n",
-    "    \n",
+    "    An object class for testing models on the MMERB dataset. Takes only a dictionary of \n",
+    "    ReportingBiasDataset datasets (one for each set in MMERB). \n",
+    "    Each model has its own tester function (test_blip() and test_vit_gpt2() for now,\n",
+    "    but more can be added easily if needed).\n",
     "    '''\n",
     "    def __init__(self, dataset_dict):\n",
     "\n",
